--- a/tsconfig.json
+++ b/tsconfig.json
@@ -160,6 +160,9 @@
       "path": "packages/terminal"
     },
     {
+      "path": "packages/test"
+    },
+    {
       "path": "packages/timeline"
     },
     {
