--- a/examples/api-samples/tsconfig.json
+++ b/examples/api-samples/tsconfig.json
@@ -31,6 +31,9 @@
       "path": "../../packages/search-in-workspace"
     },
     {
+      "path": "../../packages/test"
+    },
+    {
       "path": "../../packages/toolbar"
     },
     {
